--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,291 +1,520 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
-    }
-  
-body {
-    font-family: sans-serif;
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
-    }
-
-.head{
-    background: url("/Imagens/fundo-filmes-large.jpg") center;
-    
-}
-
-.main {
-    padding-top: 4rem;
-    height: 585px;
-    z-index: 1;
-    background-position: right center;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    position: relative;
     box-sizing: border-box;
-    background-color: transparent;
-    border-bottom: 8px solid #222;
-    }
-
-    
-  
-.svg-icon {
-    height:42px;
-    max-width:100%;
-    padding-right: .9rem;
-    position: relative;
-    fill:#e50914;
-    line-height:normal;
-    margin:0 3.5rem;
-    margin-top: 45px;
-    z-index: 1;
-    }
-
-  
-.header {
-    
-    display: flex;
-    max-width: 100%;
-    
-    }
-
-
-.header select {
-    display: inline-flex;
-    background:#50505052;    
-    color: rgb(255, 255, 255);
-    align-self: flex-start;
-    padding: 8px 16px;
-    font-weight: bold;
-    border-radius: 3px;
-    margin-top: 45px;
-    margin-left: auto;
-    z-index: 1;
-    }
-  
-.header a {
-    display: inline;
-    background: #e50914;
-    color: white;
-    align-self: flex-start;
-    padding: 8px 18px;
-    text-decoration: none;
-    border-radius: 3px;
-    margin-top: 45px;
-    margin-right: 50px;
-    z-index: 1;
-    }
-  
-.main-child {
-    z-index: 1;
-    justify-items: center;
-    }
-  
-.main h1 {
-    font-size: 54px;
-    max-width: 720px;
-    }
-  
-.main h2 {
-    font-size: 26px;
-    margin-top: 10px;
-    }
-
-.main-child p {
-    margin-bottom: 0px;
-}
-  
-.cta-form{
-    display: inline-flex;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-  
-    }
-  
-.cta-form input {
-    padding-left: 150px;
-    padding-right: 150px;
-    font-size: 18px auto;
-    font-family: sans-serif;
-    color: black;
-    }
-  
-.cta-form button {
-    background: #e50914;
-    margin-bottom: 0px;
+    font-size: 100%;
     border: none;
-    color: white;
-    font-size: 30px;
-    text-align: center;
-    padding-left: 15px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-right: 10px;
+    outline: none;
+    font-weight: 400;
+    font-family: sans-serif;
+    list-style: none;
     }
-    
+
+body {
+    background: black;
+    color: white;}
+    a {
+        text-decoration: none;
+    }
+    ul{
+        list-style: none;
+    }
+    img {
+        max-width: 100%;
+    }
+
+/* CONTAINER */
+
+.container {
+    background: url(../Imagens/fundo-filmes-pequena.jpg)  center no-repeat;
+    border-bottom: 8px solid #222;
+    display: grid;
+}
+
+.container .main{
+    text-align: center;
+    z-index: 1;
+    width: 100%;
+    align-items: center;
+}
+.container .main h1{
+    font-size: 3.125rem;
+    font-weight: bold;
+    z-index: 1;
+}
+
+.container .main h2{
+    font-weight: normal;
+    z-index: 1;
+    padding-top: 2%;
+}
+
+/* Main */
+
 
 .main p {
     font-size: 19px;
     margin-top: 40px;
     }
-  
-.gradient {
-    background: rgba(0, 0, 0, 0.5);
-    background-image: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 60%,
-      rgba(0, 0, 0, 0.8) 100%
-     );
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    }
-  
-.hero-tv {
-    background: black;
-    padding: 3rem 0;
-    z-index: 1;
-    border-bottom: 8px solid #222;
+
+.main h2 {
+    font-size: 1.5em;
+    font-weight: bold;
 }
-  
-.hero-tv h1 {
-    font-size: calc( 30px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
-    margin-bottom: 16px;
-    margin-left: 150px;
+
+/* Header */
+
+.header {
+    width: 100%;
+    float: left;
+    padding: 3% 4%;
+    z-index: 1;
+}
+
+.logo {
+    width: 250px;
+    height: 50px;
+    float: left;
+    background: url(../Imagens/netflix-logo.png) center center/150px no-repeat;
+    font-size: 0;
+}
+
+.redbutton {
+    display: inline-flex;
+    float: right;
+    cursor: pointer;
+    text-align: center;
+    color: rgb(250, 248, 248);
+    background-color: rgb(201, 0, 0);
+    border-radius: 3px;
+    margin-top: 10px;
+    margin-left: 2%;
+    padding: 6px 16px;
+    align-items: center;
+    font-weight: bold;
     
 }
 
- 
-.hero-tv p {
-    margin-left: 150px;
-    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
-}
-  
-.hero {
-    display: grid;
-    grid-template-columns: 1.1fr 1fr;
-    align-items: center;
+.redbutton a{
+    font-size: 0;
 }
 
-  
-.hero-offline .hero > div:first-child {
-    order: 2;
+.header select {
+    display: inline-flex;
+    background:#505052;    
+    color: rgb(255, 255, 255);
+    align-self: flex-start;
+    padding: 8px 16px;
+    font-weight: bold;
+    border-radius: 3px;
+    margin-top: 10px;
+    margin-left: 2%;
+    z-index: 1;
+    float: right;
+}
+
+/*Formulário dentro do MAIN*/
+.cta-form {
+    margin-top: 2%;
+    margin: 2%;
+
+
+}
+.cta-simple  {
+    margin-bottom: 2%;
+    padding: 5%;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+
+.cta-form input {
+    margin-bottom: 2%;
+    padding: 5%;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    box-sizing: border-box;
+    width: 100%;
+    
+}
+
+.cta-form button {
+    background: #e50914;
+    margin-bottom: 0px;
+    border: none;
+    color: white;
+    font-size: 16px;
+    padding-left: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 40px;
+
+ }
+
+.btn-custom span {
+    text-overflow: ellipsis; 
+    overflow: hidden; 
+    white-space: nowrap;
+    
+
+}
+
+
+ /*Gradiente dentro do MAIN*/
+
+
+.gradient {
+    max-height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    background-image: linear-gradient(
+      to top
+      rgba(0, 0, 0, 0.8) 0%,
+      rgba(0, 0, 0, 0) 30%,
+      rgba(0, 0, 0, 0.8) 70%
+     ); 
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+ 
+    
     }
-  
-.hero-offline .img-tv {
-    order: 1;
+
+    /*Aproveite na TV First Mobile*/
+
+.hero-tv {
+    background: black;
+    padding: 3rem;
+    border-bottom: 8px solid #222;
+    text-align: center;
+}
+    
+.hero-tv h1 {
+    font-size: calc( 30px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.hero-tv p {
+    text-align: center;
+    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
 }
 
 .img-tv img{
-    max-width:500px;
+    max-width:450px;
     max-height:450px;
     width: auto;
     height: auto;
-   
+}
+
+
+/*assistir offline First Mobile*/
+
+.hero-offline {
+    background: black;
+    padding: 3rem 0;
+    border-bottom: 8px solid #222;
+    text-align: center;
 }
 
 .hero-offline h1 {
     font-size: calc( 30px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
     margin-bottom: 16px;
-    margin-right: 150px;
+    text-align: center;
 }
 
 .hero-offline p {
-    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) );
-    margin-right: 150px;
+    text-align: center;
+    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
 }
 
+
 .mobile img{
-    max-width:500px;
+    max-width:450px;
     max-height:450px;
     width: auto;
     height: auto;
-    margin-bottom: 5vw;
-    margin-left: 4vw;
 }
 
+/*Assista quando quiser First Mobile*/
+    
 .hero-full{
-    border-top: 8px solid #222;
+    background: black;
+    padding: 3rem 0;
+    border-bottom: 8px solid #222;
+    text-align: center;
 }
 
 .hero-full h1 {
     font-size: calc( 30px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
     margin-bottom: 16px;
-    margin-left: 150px;
+    text-align: center;
 }
 
 .hero-full p {
-    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) );
-    margin-left: 150px;
+    text-align: center;
+    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
 }
 
 .mac img {
-    max-width:500px;
+    max-width:450px;
     max-height:450px;
     width: auto;
     height: auto;
-    margin-bottom: 5vw;
-    margin-top: 5vw;
 }
-  
+
+/*perfis para crianças First Mobile*/
+      
 .hero-kids{
+    background: black;
+    padding: 3rem 0;
+    text-align: center;
+    border-bottom: 8px solid #222;
+}
+
+.hero-kids h1 {
+    font-size: calc( 30px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.hero-kids p {
+    text-align: center;
+    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
+}
+
+.inf-funfo img {
+    max-width:450px;
+    max-height:450px;
+    width: auto;
+    height: auto;
+}
+
+/* Perguntas frequantes */
+
+.faq h1{
+    font-size: 3.125rem;
+    font-weight: bold;
+    padding-top: 4%;
+    text-align: center;
+}
+
+
+
+.faq{
+    padding: 0.8em 2.2em 0.8em 2.2em;
+}
+
+.dropdown .faq-list-item {
+    margin-bottom: 2px;
+    font-weight: 400;
+    position: relative;
+    width: 100%;
+    border: 0;
+    text-align: left;
+    background: #303030;
+    margin: 2% 0 2% 0;
+    padding-bottom: 15px;
+    padding-left: 15px;
+}
+button {
+    cursor: pointer;
+    border: 0;
+    background-color: transparent;
+    color: white;
+    padding: 15px;
+    padding-bottom: 15px;
+}
+
+
+.faqbtn {
+    display: block;
+}
+
+/* teste JS 
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #303030;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.faqbtn:hover, .faqbtn:focus {
+    background-color: #414141;
+    border: 1px;
+}
+
+.dropdown-content a {
+    color: rgb(255, 255, 255);
+    padding: 12px 16px;
+    text-decoration: none;
+
+}
+
+.dropdown-content a:hover {background-color: #3d3d3d}
+
+.show {
+    display:inline-block;
+}
+*/
+
+/* Footer */
+
+.footer {
     border-top: 8px solid #222;
 }
 
+
+@media screen and (min-width: 840px) {
+    
+/* main*/
+
+.container main{
+    max-width: 640px;
+    margin: 0 auto;
+    height: 585px;
+    padding-top: 5%;
+    padding-bottom: 3%;
+
+}
+
+.gradient {
+    height: auto;
+        max-height: 100%;
+}
+
+
+.cta-form{
+    display: inline-flex;
+    margin-bottom: 10px;
+    padding-top: 10px;
+
+    }
+  
+.cta-form input {
+    padding-right: 200px;
+    text-align: left;
+    margin: 0;
+
+    }
+
+/*Aproveite na TV*/
+
+    .hero-tv {
+        z-index: 1;
+
+    }  
+      
+    .hero {
+        display: grid;
+        grid-template-columns: 1.1fr 1fr;
+        align-items: center;
+        
+    }
+    .hero-tv p {
+        margin-left: 150px;
+        text-align: left;
+        font-size: 1.425rem;
+        font-weight: 400;
+    }
+
+
+    .hero-tv h1 {
+        margin-bottom: 16px;
+        margin-left: 150px;
+        font-weight: bold;
+        text-align: left;
+        
+    }
+
+    
+    /*assistir offline*/
+      
+    .hero-offline .hero > div:first-child {
+        order: 2;
+        }
+      
+    .hero-offline .img-tv {
+        order: 1;
+    }
+
+    .hero-offline h1 {
+        margin-bottom: 16px;
+        margin-right: 150px;
+        font-weight: bold;
+        text-align: left;
+    }
+    .hero-offline p {
+        margin-right: 150px;
+        text-align: left;
+        font-size: 1.425rem;
+        font-weight: 400;
+    }
+
+    .mobile img{
+        margin-bottom: 5vw;
+        margin-top: 5vw;
+        margin-left: 4vw;
+    }
+
+
+ /*Assista quando quiser*/
+
+.mac img {
+    margin-bottom: 5vw;
+    margin-top: 5vw;
+}
+.hero-full p {
+    margin-left: 150px;
+    text-align: left;
+    font-size: 1.425rem;
+    font-weight: 400;
+}
+
+
+.hero-full h1 {
+    margin-bottom: 16px;
+    margin-left: 150px;
+    font-weight: bold;
+    text-align: left;
+}
+
+/*perfis para crianças*/
+      
+    
 .hero-kids .hero > div:first-child {
     order: 2;
 }
-  
+    
 .hero-kids .inf-funfo {
     order: 1;
     
     }
 
 .hero-kids h1 {
-    font-size: calc( 30px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
     margin-bottom: 16px;
     margin-right: 150px;
+    font-weight: bold;
+    text-align: left;
 }
 
 .hero-kids p {
-    font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) );
     margin-right: 150px;
+    text-align: left;
+    font-size: 1.425rem;
+    font-weight: 400;
 }
 
-.inf-funfo img{
-    max-width:500px;
-    max-height:450px;
-    width: auto;
-    height: auto;
+.inf-funfo img {
     margin-bottom: 5vw;
     margin-top: 5vw;
     margin-left: 4vw;
-}
-  
-
-.faq{
-    border-top: 8px solid #222;
-}
-
-.footer {
-    padding: 4rem 0 2rem 0;
-    border-top: 8px solid #222;
-    background: black;
-    text-align: center;
-    display: grid;
-    justify-items: center;
-}
-  
-.footer p {
-    margin-top: 2rem;
-    color: #757575;
-    font-size: 13px;
-} 
+}}
