FAQ - Construção HTML CSS

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -293,83 +293,72 @@ body {
 
 /* Perguntas frequantes */
 
-.faq h1{
+
+.faq {
+    width: 100%;
+  }
+  
+  .faq h1{
     font-size: 3.125rem;
     font-weight: bold;
     padding-top: 4%;
-    text-align: center;
+    text-align: center; 
 }
-
-
-
-.faq{
-    padding: 0.8em 2.2em 0.8em 2.2em;
-}
-
-.dropdown .faq-list-item {
-    margin-bottom: 2px;
-    font-weight: 400;
-    position: relative;
+  
+.question {
     width: 100%;
-    border: 0;
     text-align: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background: #303030;
-    margin: 2% 0 2% 0;
-    padding-bottom: 15px;
-    padding-left: 15px;
-}
-button {
-    cursor: pointer;
-    border: 0;
-    background-color: transparent;
-    color: white;
-    padding: 15px;
-    padding-bottom: 15px;
+    max-width: 96%;
+    margin-left: 2%;
+    margin-top: 2%;
 }
 
-
-.faqbtn {
-    display: block;
-}
-
-/* teste JS 
-}
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
+.question input, .question .answer {
     display: none;
-    position: absolute;
+}
+
+.question label {
+    text-align: left;
+    display: block;
+    padding-left: 22px;
+}
+
+.question input:checked ~ .answer {
+    display: block ;
+}
+
+.accordion {
+    display: block;
+    font-size: 26px;
     background-color: #303030;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.faqbtn:hover, .faqbtn:focus {
-    background-color: #414141;
-    border: 1px;
-}
-
-.dropdown-content a {
     color: rgb(255, 255, 255);
-    padding: 12px 16px;
-    text-decoration: none;
-
+    text-align: left;
+    
 }
 
-.dropdown-content a:hover {background-color: #3d3d3d}
-
-.show {
-    display:inline-block;
+.answer {
+    border-top: 1px solid #ccc;
 }
-*/
-
+  
 /* Footer */
 
 .footer {
     border-top: 8px solid #222;
+}
+
+/* teste */
+
+.footer p {
+
+    margin: 0 0 30px;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 
