Alteração css - inclusão footer e faq

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -38,9 +38,10 @@ body {
     align-items: center;
 }
 .container .main h1{
-    font-size: 3.125rem;
+    font-size: 2.55rem;
     font-weight: bold;
     z-index: 1;
+    padding-top: 50px;
 }
 
 .container .main h2{
@@ -51,6 +52,9 @@ body {
 
 /* Main */
 
+.main{
+    padding: 3% 4%;
+}
 
 .main p {
     font-size: 19px;
@@ -66,17 +70,25 @@ body {
 
 .header {
     width: 100%;
-    float: left;
+    
     padding: 3% 4%;
-    z-index: 1;
+    z-index: 100;
 }
 
 .logo {
-    width: 250px;
+    width: 150px;
     height: 50px;
     float: left;
-    background: url(../Imagens/netflix-logo.png) center center/150px no-repeat;
+    background: url(../Imagens/netflix-logo.png) center/100px no-repeat;
     font-size: 0;
+   
+}
+.select-linguage{
+    padding-left: 1px;
+    width: 133px;
+    height: 32px;
+    font-weight: none;
+    
 }
 
 .redbutton {
@@ -92,7 +104,7 @@ body {
     padding: 6px 16px;
     align-items: center;
     font-weight: bold;
-    
+   
 }
 
 .redbutton a{
@@ -114,9 +126,9 @@ body {
 }
 
 /*Formulário dentro do MAIN*/
-.cta-form {
+.cta-form, .form-foot {
     margin-top: 2%;
-    margin: 2%;
+    margin: 0;
 
 
 }
@@ -128,7 +140,7 @@ body {
 }
 
 
-.cta-form input {
+.cta-form input, .form-foot input  {
     margin-bottom: 2%;
     padding: 5%;
     padding-top: 14px;
@@ -138,7 +150,7 @@ body {
     
 }
 
-.cta-form button {
+.cta-form button, .form-foot button {
     background: #e50914;
     margin-bottom: 0px;
     border: none;
@@ -148,6 +160,7 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 40px;
+    
 
  }
 
@@ -155,30 +168,29 @@ body {
     text-overflow: ellipsis; 
     overflow: hidden; 
     white-space: nowrap;
-    
-
 }
 
+.cta-simple2 {
+    padding: 5% 5%;
+}
 
  /*Gradiente dentro do MAIN*/
 
 
 .gradient {
-    max-height: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.4);
     background-image: linear-gradient(
-      to top
-      rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 30%,
-      rgba(0, 0, 0, 0.8) 70%
-     ); 
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
- 
-    
+      to top,
+      rgba(0, 0, 0, 0.8) 0,
+      rgba(0, 0, 0, 0) 60%,
+      rgba(0, 0, 0, 0.8) 100%
+    );
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     }
 
     /*Aproveite na TV First Mobile*/
@@ -200,20 +212,29 @@ body {
     text-align: center;
     font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
 }
+  .img-tv {
+    position: relative;
+  }
+  
+  .img-tv img {
+    position: relative;
+    z-index: 1;
+  }
 
-.img-tv img{
-    max-width:450px;
-    max-height:450px;
-    width: auto;
-    height: auto;
-}
-
+.video-tv {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
 /*assistir offline First Mobile*/
 
 .hero-offline {
     background: black;
-    padding: 3rem 0;
+    padding: 3rem ;
     border-bottom: 8px solid #222;
     text-align: center;
 }
@@ -241,7 +262,7 @@ body {
     
 .hero-full{
     background: black;
-    padding: 3rem 0;
+    padding: 3rem ;
     border-bottom: 8px solid #222;
     text-align: center;
 }
@@ -268,7 +289,7 @@ body {
       
 .hero-kids{
     background: black;
-    padding: 3rem 0;
+    padding: 3rem;
     text-align: center;
     border-bottom: 8px solid #222;
 }
@@ -296,10 +317,12 @@ body {
 
 .faq {
     width: 100%;
+    padding: 0 10%;
+
   }
   
-  .faq h1{
-    font-size: 3.125rem;
+  .faq-title{
+    font-size: 2.125rem;
     font-weight: bold;
     padding-top: 4%;
     text-align: center; 
@@ -332,7 +355,7 @@ body {
 
 .accordion {
     display: block;
-    font-size: 26px;
+    font-size: 20px;
     background-color: #303030;
     color: rgb(255, 255, 255);
     text-align: left;
@@ -341,28 +364,72 @@ body {
 
 .answer {
     border-top: 1px solid #ccc;
+    font-size: 20px;
+    margin: 2% 2%;
 }
   
 /* Footer */
 
 .footer {
     border-top: 8px solid #222;
+    width: 100%;
+    margin-top: 80px;
+    padding-bottom: 20px;
+    color: #757575;
+    position: relative;
+
 }
 
-/* teste */
+.footer-1{
+    max-width: 900px;
+    margin-left: 20%;
+}
+.footer-1 a {
+    text-decoration: none;
+    color:#757575;
+}
+
 
 .footer p {
+    font-size: 1em;
+    margin: 30px 0 30px 30px; 
 
-    margin: 0 0 30px;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+}
+
+
+
+.footer li {
+    display: inline-block;
+    font-size: 0.7em;
+    width: 155px;
+    height: 30px;
+    align-items: center;
+
+}
+
+.footer li a{
+    text-decoration: none;
+    color: #757575; 
+}
+
+.footer li:hover {
+    text-decoration: underline;
+}
+
+.footer p:hover {
+    text-decoration: underline;
 }
 
 
 @media screen and (min-width: 840px) {
+
+.logo {
+    width: 250px;
+    height: 50px;
+    float: left;
+    background: url(../Imagens/netflix-logo.png) center center/150px no-repeat;
+    font-size: 0;
+}
     
 /* main*/
 
@@ -374,6 +441,10 @@ body {
     padding-bottom: 3%;
 
 }
+.container .main h1{
+    font-size: 3.125rem;
+
+}
 
 .gradient {
     height: auto;
@@ -381,19 +452,32 @@ body {
 }
 
 
-.cta-form{
+.cta-form, .form-foot {
     display: inline-flex;
     margin-bottom: 10px;
     padding-top: 10px;
 
     }
   
-.cta-form input {
+.cta-form input, .form-foot input {
     padding-right: 200px;
     text-align: left;
     margin: 0;
 
     }
+
+/* form foot */
+
+.cta-simple2 {
+    max-width: 740px;
+    margin: auto auto;
+
+}
+.footer li {
+    font-size: 0.9em;
+    width: 200px;
+    height: 40px;
+}
 
 /*Aproveite na TV*/
 
@@ -475,6 +559,14 @@ body {
     font-weight: bold;
     text-align: left;
 }
+.faq-title{
+    font-size: 3.125rem;
+}
+.accordion, .answer{
+    font-size: 26px;
+    
+}
+
 
 /*perfis para crianças*/
       
@@ -506,4 +598,6 @@ body {
     margin-bottom: 5vw;
     margin-top: 5vw;
     margin-left: 4vw;
-}}
+}
+}
+
