--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -212,20 +212,24 @@ body {
     text-align: center;
     font-size: calc( 16px + (16 - 8) * (7vw - 40px) / (80 - 40) ); 
 }
-  .img-tv {
+
+  
+  .mac {
     position: relative;
   }
   
-  .img-tv img {
+  .mac img {
     position: relative;
     z-index: 1;
   }
 
-.video-tv {
+.video-mac {
     width: 100%;
     height: 100%;
+    max-width: 45%;
+    max-height: 30%;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
@@ -284,6 +288,26 @@ body {
     width: auto;
     height: auto;
 }
+  
+  .img-tv {
+    position: relative;
+  }
+  
+  .img-tv img {
+    position: relative;
+    z-index: 1;
+  }
+
+.video-tv {
+    width: 100%;
+    height: 100%;
+    max-width: 75%;
+    max-height: 70%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
 /*perfis para crianças First Mobile*/
       
